<resources>
    <string name="app_name">My Application10</string>
    <string name="todo">TODO</string>
    <string name="art_zone">ART ZONE</string>
    <string name="manage_events">Manage Events</string>
    <string name="back">BACK</string>
    <string name="create_new_event">Create New Event</string>
    <string name="todo2">TODO</string>
    <string name="location">Location :</string>
    <string name="date_time">Date/time :</string>
    <string name="description">Description :</string>
    <string name="heading">Heading :</string>
    <string name="enter_new_event_details">Enter New Event Details</string>
    <string name="art_zone2">ART ZONE</string>
    <string name="todo3">TODO</string>
    <string name="event_details">Event Details</string>
    <string name="last_day_to_accept_certificate_of_residence_for_fall_n_2022_9_29_2022_n_all_day_et">Last day to accept Certificate of Residence for Fall \n 2022 9/29/2022,\n All Day (ET)</string>
    <string name="online_talk_patriots_from_the_barrio_mexican_americans_in_art_day_ii_n9_28_2022_n2_00_pm_3_30_pm_et">Online talk: Patriots from the Barrio: Mexican-Americans in Art day II \n9/28/2022, \n2:00 PM - 3:30 PM (ET)</string>
    <string name="ask_the_career_coach_in_person_and_virtual_career_amp_resume_drop_ins_n9_26_2022_n1_00_pm_3_00_pm_et"><![CDATA[Ask the Career Coach! In-Person and Virtual Career & Resume Drop-Ins \n9/26/2022, \n1:00 PM - 3:00 PM (ET)]]></string>
    <string name="_12_events_found">12 Events Found</string>
    <string name="back2">BACK</string>
    <string name="all_events_details">All Events Details</string>
    <string name="_3_events_found">3 Events Found</string>
    <string name="todo4">TODO</string>
    <string name="new_updates">New Updates</string>
    <string name="exhibition_notices">Exhibition notices</string>
    <string name="add_new_events">Add New Events</string>
    <string name="view_all_events">View all events</string>
    <string name="handle_event_details">Handle Event details</string>
    <string name="todo5">TODO</string>
    <string name="art_zone3">ART ZONE</string>
    <string name="events_managing_menu">Events Managing Menu</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="art_zone4">ART ZONE</string>
    <string name="edit_delete_details">Edit/Delete Details</string>
    <string name="last_day_to_accept_certificate_of_residence_for_fall_n_2022_9_29_2022_n_all_day_et1">Last day to accept Certificate of Residence for Fall \n 2022 9/29/2022,\n All Day (ET)</string>
    <string name="online_talk_patriots_from_the_barrio_mexican_americans_in_art_day_ii_n9_28_2022_n2_00_pm_3_30_pm_et1">Online talk: Patriots from the Barrio: Mexican-Americans in Art day II \n9/28/2022, \n2:00 PM - 3:30 PM (ET)</string>
    <string name="back3">BACK</string>
    <string name="art_zone6">ART ZONE</string>
    <string name="songs">Songs</string>
    <string name="todo9">TODO</string>
    <string name="back4">BACK</string>
    <string name="_4_songs_found">4 Songs Found</string>
    <string name="_1_he_ll_want_to_use_your_yacht_n_he_ll_want_to_use_your_yacht">1 He\'ll want to use your yacht \n He\'ll want to use your yacht</string>
    <string name="_2_he_ll_want_to_use_your_yacht_n_ll_want_to_use_your_yacht">2 He\'ll want to use your yacht,\n ll want to use your yacht</string>
    <string name="_3_he_ll_want_to_use_your_yacht_n_want_to_use_your_yacht">3 He\'ll want to use your yacht,\n want to use your yacht</string>
    <string name="_4_he_ll_want_to_use_your_yacht_n_to_use_your_yacht">4 He\'ll want to use your yacht \n to use your yacht</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
</resources>